--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 chromeDriverVersion = 2.38
 geckoDriverVersion = 0.20.1
-projectGroup = com.github.epadron
+projectGroup = com.github.njota08
 projectVersion = 1.0.0
 seleniumVersion = 3.11.0
 testNgVersion = 6.14.3
