--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'CiklumTest'
-rootProject.name = 'CiklumTest'
+rootProject.name = 'AddisonGlobalLtd'
+rootProject.name = 'AddisonGlobalLtd'
 
